--- a/PP.ipynb
+++ b/PP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,24 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "CallTimeException",
-     "evalue": "Call time must be greater than wait_time as web.whatsapp.com takes some time to load",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mCallTimeException\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_1020/3742340404.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mpwk\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msendwhatmsg\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"+8801877817137\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Hey , I'am using Python.  \"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m39\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\pywhatkit\\main.py\u001b[0m in \u001b[0;36msendwhatmsg\u001b[1;34m(phone_no, message, time_hour, time_min, wait_time, tab_close, close_time)\u001b[0m\n\u001b[0;32m    100\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    101\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mleft_time\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mwait_time\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 102\u001b[1;33m         raise CallTimeException(\n\u001b[0m\u001b[0;32m    103\u001b[0m             \"Call time must be greater than wait_time as web.whatsapp.com takes some time to load\")\n\u001b[0;32m    104\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mCallTimeException\u001b[0m: Call time must be greater than wait_time as web.whatsapp.com takes some time to load"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pwk.sendwhatmsg(\"+8801877817137\", \"Hey , I'am using Python. \" ,1,39)"
+    "pwk.sendwhatmsg_instantly(\"+8801877817137\", \"Hey , I'am using Python. \")"
    ]
   }
  ],
